fix button disabled style on mobile view

--- a/assets/stylesheets/mmn-solved-unsolved-button.scss
+++ b/assets/stylesheets/mmn-solved-unsolved-button.scss
@@ -25,7 +25,9 @@ $success: green;
 }
 
 .mobile-view #topic-footer-buttons {
-  .btn[disabled]:hover, .btn.disabled:hover {
-    color: unset !important;
+  .btn[disabled], .btn.disabled {
+    &:hover, &:visited, &:active, &:focus {
+      color: unset !important;
+    }
   }
 }
